# .github

./: .gitignore  CODEOWNERS  README.md  copilot-instructions.md  copilot-instructions.md.bak  dependabot.yml  labels.yml  pyproject.toml  settings-snippet.json
ISSUE_TEMPLATE/: bug.yml  feature.yml  refactor.yml
PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
chatmodes/: 4.1-Beast.chatmode.md  tdd-green.chatmode.md
copilot/: my-ci-cd.instructions.md  my-code.instructions.md  my-docs.instructions.md  my-environment.instructions.md  my-pull-request.instructions.md  my-review.instructions.md
copilot/templates/: .gitignore  cd.yml  ci.yml  pyproject.toml
docs/: CHANGES.md  INDEX.md  README.md  SETUP-GUIDE.md  SUMMARY.md  prompt-recommendations-config.md  prompts-quick-reference.md
docs/guidelines/: ARCHITECTURE.md  CONTRIBUTING.md  copilot-instructions.md
dotgithub/.private/: agents-workflow.md  new-project-sop.md
dotgithub/ISSUE_TEMPLATE/: config.yml
dotgithub/instructions/github.copilot.chat/: my-copilot-instructions.md
dotgithub/workflows/: ci.yml
guidelines/: ARCHITECTURE.md  CLAUDE.md  CODING_GUIDELINES.md  COMMIT_GUIDELINES.md  CONFIGURATION.md  CONTRIBUTING.md  README.md  TESTING_GUIDELINES.md  copilot-instructions.md
instructions/: my-ci-cd.instructions.md  my-code.instructions.md  my-docs.instructions.md  my-python-coding.instructions.md  my-review.instructions.md  my-tests.instructions.md  python.instructions.md
prompts/: README.md  analyze-dataframe.prompt.md  code-exemplars-blueprint-generator.prompt.md  comment-code-generate-a-tutorial.prompt.md  create-latex-table.prompt.md  document-function.prompt.md  folder-structure-blueprint-generator.prompt.md  generate-pytest.prompt.md  optimize-code.prompt.md  review-commit.prompt.md
scripts/: README-vscode-setup.md  migrate-to-uv.sh  setup-dev.sh  vscode-setup.sh
workflows/: ci.yml  codeql.yml  copilot-setup-steps.yml  labels.yml  pre-release.yml  release.yml
